--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>Orchid Cavalry</h1>
-<mat-slider min="1" max="100" step="1" value="50"></mat-slider>
+
+<img src="../assets/logo.png">
+
+
 <router-outlet></router-outlet>
