--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,28 @@
 
-<img src="../assets/logo.png">
 
+<div *ngIf="!isLoaded" class="d-flex justify-content-center">
+    <p class="mx-5">You have inherited the PISTIL, the remnants of a military installation belonging to a once powerful military force that, long ago, saved the world from catastrophe. Your goal is to return the PISTIL to its former grandeur by restoring the name and glory of the...</p>
+</div>
+<div class="d-flex justify-content-center">
+    <img class="img-fluid mx-5" src="../assets/logo.png">
+</div>
 
-<router-outlet></router-outlet>
+<div *ngIf="!isLoaded" class="d-flex justify-content-center">
+    <a class="btn btn-dark" (click)="StartGame()">START</a>
+</div>
+
+<div *ngIf="isLoaded">
+    <nav class="navbar navbar-dark bg-dark d-flex justify-content-center">
+        <a class="navbar-brand">Missions</a>
+        <a class="navbar-brand">Units</a>
+        <a class="navbar-brand">Buildings</a>
+        <a class="navbar-brand">Treasury</a>
+      </nav>
+    
+    <router-outlet></router-outlet>
+
+    <div class="d-flex justify-content-center">
+        <a class="btn btn-primary-outline">Save to File</a>
+        <a class="btn btn-primary-outline">Load from File</a>
+    </div>
+</div>
