Separating Save into its own injectable repo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,12 +17,13 @@
         <a class="navbar-brand">Units</a>
         <a class="navbar-brand">Buildings</a>
         <a class="navbar-brand">Treasury</a>
+        <a class="navbar-brand">Factions</a>
+        <a class="navbar-brand">Achievements</a>
+        <a class="navbar-brand">Game Data</a>
       </nav>
     
-    <router-outlet></router-outlet>
+      <div class="jumbotron d-flex justify-content-center">
+        <router-outlet></router-outlet>
+      </div>
 
-    <div class="d-flex justify-content-center">
-        <a class="btn btn-primary-outline">Save to File</a>
-        <a class="btn btn-primary-outline">Load from File</a>
-    </div>
 </div>
