--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,21 @@
-
-
-<div *ngIf="!isLoaded" class="d-flex justify-content-center">
-    <p class="mx-5">You have inherited the PISTIL, the remnants of a military installation belonging to a once powerful military force that, long ago, saved the world from catastrophe. Your goal is to return the PISTIL to its former grandeur by restoring the name and glory of the...</p>
-</div>
 <div class="d-flex justify-content-center">
-    <img class="img-fluid mx-5" src="../assets/logo.png">
-</div>
+  <div>
+    <div *ngIf="!isLoaded" >
+      <p class="mx-5">You have inherited the PISTIL, the remnants of a military installation belonging to a once
+        powerful military force that, long ago, saved the world from catastrophe. Your goal is to return the PISTIL to
+        its former grandeur by restoring the name and glory of the...</p>
+    </div>
+    
+    <div class="d-flex justify-content-center">
+      <img alt="Orchid Cavalry Logo" class="img-fluid" src="../assets/logo.png">
+    </div>
 
-<div *ngIf="!isLoaded" class="d-flex justify-content-center">
-    <a class="btn btn-dark" (click)="StartGame()">START</a>
-</div>
+    <div *ngIf="!isLoaded" class="d-flex justify-content-center">
+      <a class="btn btn-dark" (click)="StartGame()">START</a>
+    </div>
 
-<div *ngIf="isLoaded">
-    <nav class="navbar navbar-dark bg-dark d-flex justify-content-center">
+    <div *ngIf="isLoaded">
+      <nav class="navbar navbar-dark bg-dark ">
         <a class="navbar-brand">Missions</a>
         <a class="navbar-brand">Units</a>
         <a class="navbar-brand">Buildings</a>
@@ -21,9 +24,16 @@
         <a class="navbar-brand">Achievements</a>
         <a class="navbar-brand">Game Data</a>
       </nav>
-    
-      <div class="jumbotron d-flex justify-content-center">
+
+      <div>
         <router-outlet></router-outlet>
       </div>
+      <div *ngIf="isLoaded" class="d-flex justify-content-center">
+          <a class="btn btn-success">
+              Next Turn
+          </a>
+      </div>
 
+    </div>
+  </div>
 </div>
