--- a/src/app/pages/assignments/assignments.component.html
+++ b/src/app/pages/assignments/assignments.component.html
@@ -1,1 +1,10 @@
-<p>assignments works!</p>
+<div *ngIf="!!assignments && assignments.length>0" >
+
+</div>
+<div  *ngIf="!assignments || assignments.length==0"  class="d-flex justify-content-center">
+    No Assignments Available
+</div>
+
+<div *ngFor="let assignment of assignments">
+    {{assignment.Title}}
+</div>
