--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ html, body { height: 100%; }
 
 .jumbotron{
     background-color: rgb(253, 237, 237);
-    border: 1px;
-    border-style: double;
-    border-color: darkgreen;
+    border: 3px;
+    border-style: groove;
+    border-color: darkslategrey;
 }
