--- a/src/app/pages/assignments/assignments.component.html
+++ b/src/app/pages/assignments/assignments.component.html
@@ -33,6 +33,9 @@
 </div>
 
 <div *ngIf="IsSelectingUnit()">
+  <div class="row d-flex justify-content-center">
+    <h3>Select a unit to assign:</h3>
+  </div>
   <div class="row">
     <div class="card" *ngFor="let unit of GetOpenUnits()">
       <a class="btn btn-secondary" (click)="AssignUnit(unit)">
