Generating region names and municipalities

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,6 +33,8 @@
         </a>
       </div>
 
+      <a class="btn btn-red" (click)="GenerateRegion()">Generate Region</a>
+
     </div>
   </div>
 </div>
