Trying to get deployments to work.  Still issues.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
         </a>
       </div>
 
-      <a class="btn btn-red" (click)="GenerateRegion()">Generate Region</a>
+      <!-- <a class="btn btn-red" (click)="Generate()">Generate</a> -->
 
     </div>
   </div>
