Adding reset button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,8 @@
 
       <!-- <a class="btn btn-red" (click)="Generate()">Generate</a> -->
 
+      <a class="btn btn-danger" (click)="Reset()">Reset</a>
+
     </div>
   </div>
 </div>
